// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should create a default medium secondry button 1`] = `
<button
  class="sc-bczRLJ jGJCSX"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a large secondry button 1`] = `
<button
  class="sc-bczRLJ cGAcOK"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a primary button 1`] = `
<button
  class="sc-bczRLJ hKYNbp"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a small secondry button 1`] = `
<button
  class="sc-bczRLJ jcxdVN"
  label="Button"
>
  Button
</button>
`;

exports[`Button should create a yellow labeless button 1`] = `
<button
  class="sc-bczRLJ jGJCSX"
  label=""
  style="background-color: yellow;"
/>
`;
